<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        android:id="@+id/textView_s"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/setting_time_s" />

    <EditText
        android:id="@+id/editTextNumber_s"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="number" />

    <TextView
        android:id="@+id/textView_m"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/setting_time_m" />

    <EditText
        android:id="@+id/editTextNumber_m"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="number" />


    <TextView
        android:id="@+id/textView_h"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/setting_time_h" />

    <EditText
        android:id="@+id/editTextNumber_h"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="number" />

    <Button
        android:id="@+id/button_ok"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/ok" />

</LinearLayout>